<resources>
    <string name="app_name">Redeminds</string>
    <string name="conditions_of_use"><u>conditions of use</u></string>
    <string name="privacy_policy"><u>privacy policy</u></string>
    <string name="accept_terms_of_service_and_privacy_policy"><u>By continuing you accept the Terms of service \nand Privacy Policy</u></string>
    <string name="lorem_ipsum">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on.</string>

    <string name="intro_scroll_text">The magical world is in danger, and only you, the Chosen One, can save it!\n\n\nThe wizards have lost something irreplaceable, and you must go on a journey to get it back.\n\n\nOn this journey, you will have to make choices to help you discover your strengths, unlock hidden powers, and achieve your goals.\n\n\nDive in—a world of adventure awaits!</string>

    <string name="chapter_one_scroll_text">Chief of Wizards,\none who can tell\nthe future, and his\npower is held in the Eternity\nGemstone. He\ntrusts you with the\nquest to retrieve\nthe gemstone\nfrom the wrong\nhands.</string>
    <string name="chapter_one_wizard_before_assessment_speak_1">\"Welcome. You have been invited for a quest.\nThere are people who need your help.\nA heroic adventure awaits.\"</string>
    <string name="chapter_one_wizard_before_assessment_speak_2">\"I am the chief of the clan of wizards. We are a very\nancient and magical people, but something vital has\nbeen stolen from us. Without it, we have no magic. Only\nyou can help us. You are our Chosen One, our last hope.\"</string>
    <string name="chapter_one_wizard_before_assessment_speak_3">\"The Eternity Gemstone holds all our magic. An evil\nman, Lord Acheron, has stolen it so that he can capture\nland and oppress the people. We must get it out of Lord\nAcheron’s hands, to bring peace to the land.\"</string>

    <string name="chapter_two_scroll_text">Wise Spirit who is\nyour trusted\ncompanion. Call\nout for Olwin\nwhen you feel lost\nduring the\njourney.</string>
    <string name="chapter_two_wizard_before_assessment_1_speak">\"The Chosen One must know themselves better than\nanyone, and must always be honest. Choose the\nstatements that are true, so that we know we can trust\nyou.\"</string>
    <string name="chapter_two_wizard_after_assessment_1_speak">\"I believe that your answers are honest, and they help\nme trust you.\nYou are going on a long quest. As much as it involves\ntravelling far, it also involves looking inwards, and always\nbeing honest with yourself. Olwin the Wise will fly with\nyou, and be your helper on your journey. When you feel\nstuck, Olwin will help you find the answer.\"</string>

    <string name="chapter_three_scroll_1_title">Forest</string>
    <string name="chapter_three_scroll_1_content">AMysterious area in\na remote river\ndelta near Lord\nAcheron\'s Kingdom.</string>
    <string name="chapter_three_olwin_speak_before_assessment_1">\"I hear from the passing birds that Lord Acheron\nwho stole the Eternity gemstone is going to the\ncross the river. But how do we find the river?\"</string>
    <string name="chapter_three_scroll_2_title">The\nMerchant\nFair</string>
    <string name="chapter_three_scroll_2_content">A gathering of all\nkingdoms to exhibit\ntheir possessions\nfor trade.</string>
    <string name="chapter_three_olwin_speak_before_assessment_2">\"Hurrah, we’ve reached the fair! Lord Acheron is here\ntoo. We must disguise ourselves so that he doesn’t\nsee us. And to play our part convincingly, we must\nplay to our strengths...\nWhat are your strengths?\"</string>
    <string name="chapter_three_olwin_speak_before_assessment_3">\"Wonderful! This knowledge will help you disguise\nyourself. Remember, the most convincing role to\nplay is the one that is most true to us. Here are the\ndifferent jobs you could do at the fair–would you like\nto try them out?\"</string>
    <string name="chapter_three_olwin_speak_after_assessment_3">Lord Acheron is leaving!\nHe is going near the river</string>

    <string name="chapter_four_olwin_speak_1_before_assessment_1">Well done! That’s a great disguise. But I heard from\nbirds that Lord Acheron is leaving. Let\'s follow him!</string>
    <string name="chapter_four_lord_acheron_speak_before_assessment_1">“Can you help me cross this river?”</string>

    <string name="how_do_we_find_river">How do we find the river?</string>
    <string name="submit">Submit</string>
    <string name="i_see_myself_as_someone_who">I see myself as someone who..</string>

    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="disagree">Disagree</string>
    <string name="neutral">Neutral/Not Sure</string>
    <string name="agree">Agree</string>
    <string name="strongly_agree">Strongly Agree</string>
    
    
    <string-array name="assessment_chapter2_one">
        <item>I enjoy learning about other cultures</item>
        <item>I like to innovate with ideas or aesthetics</item>
        <item>I cooperate well with others and can mediate disputes.</item>
        <item>I like working with tools and machines</item>
        <item>I like maintaining routines and structuring plans</item>
        <item>I can give speeches and lead a group</item>
        <item>I like to keep records and note down details</item>
        <item>I like to figure things out and can understand science-use information for it</item>
        <item>I can fix electronic and mechanical tools</item>
        <item>I like to do volunteer service</item>
        <item>I can make original crafts, dinners and school projects.</item>
        <item>I can think creatively using my words, music or arts</item>
        <item>I am practical and like working by myself</item>
        <item>I can persuade people to take certain decisions</item>
        <item>I can persuade people to take certain decisions</item>
        <item>I am self-confident and assertive</item>
        <item>I can do complex calculations and perform experiments</item>
        <item>I like analyzing and understanding solutions to problems</item>
        <item>I can plan and supervise activities and events</item>
    </string-array>
</resources>