<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:paddingHorizontal="3dp"
    android:paddingVertical="5dp">

    <View
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.8" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/assessment_title_color"
        android:textSize="@dimen/agree_disagree_text_size"
        android:gravity="center"
        android:layout_margin="2dp"
        android:background="@drawable/assessment_title_bg"
        android:text="@string/strongly_disagree" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="2dp"
        android:background="@drawable/assessment_title_bg"
        android:textColor="@color/assessment_title_color"
        android:textSize="@dimen/agree_disagree_text_size"
        android:text="@string/disagree" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/assessment_title_bg"
        android:gravity="center"
        android:layout_margin="2dp"
        android:textColor="@color/assessment_title_color"
        android:textSize="@dimen/agree_disagree_text_size"
        android:text="@string/neutral" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/assessment_title_bg"
        android:textColor="@color/assessment_title_color"
        android:textSize="@dimen/agree_disagree_text_size"
        android:gravity="center"
        android:layout_margin="2dp"
        android:text="@string/agree" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="@drawable/assessment_title_bg"
        android:textColor="@color/assessment_title_color"
        android:textSize="@dimen/agree_disagree_text_size"
        android:gravity="center"
        android:text="@string/strongly_agree" />
</LinearLayout>