<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChapterThreeActivity">
    <RelativeLayout
        android:id="@+id/chapter_three_whole_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextureView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/chapter_three_videoview_textureview"
            android:layout_centerInParent="true"/>

        <VideoView
            android:id="@+id/chapter_three_videoview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black20" />

        <RelativeLayout
            android:id="@+id/chapter_three_title_relativelayout"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent">

            <com.redeminds.app.uicomponents.ChapterTitle
                xmlns:chapterTitleNS="http://schemas.android.com/apk/res/com.redeminds.app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                chapterTitleNS:chapter_number="CHAPTER 03"
                chapterTitleNS:chapter_name="The Journey Begins"
                chapterTitleNS:chapter_tagline="Discover your strengths!"/>

            <ImageView
                android:id="@+id/chapter_three_title_next_button"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:src="@drawable/assessment_next_button"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chapter_three_scroll_1_relativelayout"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent">

            <com.redeminds.app.uicomponents.Scroll
                xmlns:scrollNS="http://schemas.android.com/apk/res/com.redeminds.app"
                android:layout_width="224dp"
                android:layout_height="324dp"
                android:layout_centerInParent="true"
                scrollNS:scroll_title="@string/chapter_three_scroll_1_title"
                scrollNS:scroll_content="@string/chapter_three_scroll_1_content"
                scrollNS:scroll_title_margin_top="65dp"
                scrollNS:scroll_content_margin_top="13dp"/>

            <ImageView
                android:id="@+id/chapter_three_scroll_1_next_button"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:src="@drawable/assessment_next_button"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chapter_three_olwin_speak_before_assessment_1_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:layout_width="198dp"
                android:layout_height="155dp"
                android:src="@drawable/olwin_side"
                android:layout_alignParentStart="true"
                android:layout_marginTop="170dp"/>

            <com.redeminds.app.uicomponents.Speak
                xmlns:speakNS="http://schemas.android.com/apk/res/com.redeminds.app"
                android:layout_width="474dp"
                android:layout_height="202dp"
                android:layout_marginTop="28dp"
                android:layout_marginStart="152dp"
                speakNS:speak_text="@string/chapter_three_olwin_speak_before_assessment_1"
                speakNS:speak_text_margin_top="44dp"
                speakNS:speak_text_margin_start="31dp"
                speakNS:flip="false"/>

            <ImageView
                android:id="@+id/chapter_three_olwin_speak_before_assessment_1_next_button"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:src="@drawable/assessment_next_button"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chapter_three_assessment_1_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Assessment"
                android:background="@color/white"
                style="@style/scroll_title"/>

            <ImageView
                android:id="@+id/chapter_three_assessment_1_next_button"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:src="@drawable/assessment_next_button"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chapter_three_scroll_2_relativelayout"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent">

            <com.redeminds.app.uicomponents.Scroll
                xmlns:scrollNS="http://schemas.android.com/apk/res/com.redeminds.app"
                android:layout_width="224dp"
                android:layout_height="324dp"
                android:layout_centerInParent="true"
                scrollNS:scroll_title="@string/chapter_three_scroll_2_title"
                scrollNS:scroll_content="@string/chapter_three_scroll_2_content"
                scrollNS:scroll_title_margin_top="65dp"
                scrollNS:scroll_content_margin_top="13dp"/>

            <ImageView
                android:id="@+id/chapter_three_scroll_2_next_button"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:src="@drawable/assessment_next_button"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chapter_three_olwin_speak_before_assessment_2_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:layout_width="198dp"
                android:layout_height="155dp"
                android:src="@drawable/olwin_side"
                android:layout_alignParentStart="true"
                android:layout_marginTop="170dp"/>

            <com.redeminds.app.uicomponents.Speak
                xmlns:speakNS="http://schemas.android.com/apk/res/com.redeminds.app"
                android:layout_width="474dp"
                android:layout_height="202dp"
                android:layout_marginTop="28dp"
                android:layout_marginStart="152dp"
                speakNS:speak_text="@string/chapter_three_olwin_speak_before_assessment_2"
                speakNS:speak_text_margin_top="27dp"
                speakNS:speak_text_margin_start="33dp"
                speakNS:flip="false"/>

            <ImageView
                android:id="@+id/chapter_three_olwin_speak_before_assessment_2_next_button"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:src="@drawable/assessment_next_button"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chapter_three_assessment_2_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Assessment"
                android:background="@color/white"
                style="@style/scroll_title"/>

            <ImageView
                android:id="@+id/chapter_three_assessment_2_next_button"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:src="@drawable/assessment_next_button"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chapter_three_olwin_speak_before_assessment_3_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:layout_width="198dp"
                android:layout_height="155dp"
                android:src="@drawable/olwin_side"
                android:layout_alignParentStart="true"
                android:layout_marginTop="170dp"/>

            <com.redeminds.app.uicomponents.Speak
                xmlns:speakNS="http://schemas.android.com/apk/res/com.redeminds.app"
                android:layout_width="474dp"
                android:layout_height="202dp"
                android:layout_marginTop="28dp"
                android:layout_marginStart="152dp"
                speakNS:speak_text="@string/chapter_three_olwin_speak_before_assessment_3"
                speakNS:speak_text_margin_top="27dp"
                speakNS:speak_text_margin_start="33dp"
                speakNS:flip="false"/>

            <ImageView
                android:id="@+id/chapter_three_olwin_speak_before_assessment_3_next_button"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:src="@drawable/assessment_next_button"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chapter_three_assessment_3_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Assessment"
                android:background="@color/white"
                style="@style/scroll_title"/>

            <ImageView
                android:id="@+id/chapter_three_assessment_3_next_button"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:src="@drawable/assessment_next_button"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chapter_three_olwin_speak_after_assessment_3_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:layout_width="198dp"
                android:layout_height="155dp"
                android:src="@drawable/olwin_side"
                android:layout_alignParentStart="true"
                android:layout_marginTop="170dp"/>

            <com.redeminds.app.uicomponents.Speak
                xmlns:speakNS="http://schemas.android.com/apk/res/com.redeminds.app"
                android:layout_width="270dp"
                android:layout_height="115dp"
                android:layout_marginTop="78dp"
                android:layout_marginStart="122dp"
                speakNS:speak_text="@string/chapter_three_olwin_speak_after_assessment_3"
                speakNS:speak_text_margin_top="27dp"
                speakNS:speak_text_margin_start="29dp"
                speakNS:flip="false"/>

            <ImageView
                android:id="@+id/chapter_three_olwin_speak_after_assessment_3_next_button"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:src="@drawable/assessment_next_button"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </RelativeLayout>

</layout>